# ai-lib-rust

./: .gitattributes  .gitignore  AI-Protocol 深度优化执行计划 (ABCD).txt  ALIGNMENT_REVIEW.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  Cargo.toml  FACADE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  KEYRING_ANALYSIS.md  MULTILAYER_VALIDATOR_ANALYSIS.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PRE_RELEASE_SUMMARY.md  README.md  README_CN.md  RELEASE_NOTES_v0.8.4.md  RELEASE_NOTES_v0.8.6.md  RELEASE_READINESS_REPORT.md  ROBUSTNESS_IMPROVEMENTS.md  RUNTIME_BACKLOG.md  multilayer validator discuss.txt
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml  pt073-rust-core-wasm.yml  validate-protocols.yml  verify-and-merge-gate.yml
benches/: protocol_loading.rs  request_compilation.rs  streaming_pipeline.rs
benchmarks/: README.md  benchmark_config.json  run_autocannon.ps1
crates/ai-lib-contact/: Cargo.toml
crates/ai-lib-contact/src/: lib.rs
crates/ai-lib-contact/src/batch/: mod.rs
crates/ai-lib-contact/src/cache/: backend.rs  key.rs  manager.rs  mod.rs
crates/ai-lib-contact/src/context/: assembler.rs  budget.rs  error.rs  mod.rs  token_estimate.rs
crates/ai-lib-contact/src/guardrails/: mod.rs  pii.rs  result.rs
crates/ai-lib-contact/src/interceptors/: mod.rs
crates/ai-lib-contact/src/plugins/: base.rs  hooks.rs  middleware.rs  registry.rs
crates/ai-lib-contact/src/resilience/: circuit_breaker.rs  mod.rs  rate_limiter.rs
crates/ai-lib-contact/src/routing/: mod.rs
crates/ai-lib-contact/src/telemetry/: mod.rs
crates/ai-lib-contact/src/tokens/: counter.rs  mod.rs
crates/ai-lib-core/: Cargo.toml
crates/ai-lib-core/src/: error.rs  error_code.rs  feedback.rs  lib.rs
crates/ai-lib-core/src/client/: builder.rs  core.rs  endpoint.rs  execution.rs  policy.rs  preflight.rs  signals.rs  types.rs
crates/ai-lib-core/src/computer_use/: mod.rs
crates/ai-lib-core/src/drivers/: anthropic.rs  mod.rs
crates/ai-lib-core/src/embeddings/: mod.rs
crates/ai-lib-core/src/mcp/: mod.rs
crates/ai-lib-core/src/multimodal/: mod.rs
crates/ai-lib-core/src/pipeline/: decode.rs  event_map.rs  fan_out.rs  mod.rs  retry.rs  tests.rs
crates/ai-lib-core/src/protocol/: error.rs  mod.rs  request.rs  schema_v1.json  validator.rs  wasm_manifest.rs
crates/ai-lib-core/src/protocol/v2/: capabilities.rs  contracts.rs  manifest.rs  mod.rs  provider_contract.rs
crates/ai-lib-core/src/protocol/v2/embedded/: anthropic-messages.contract.yaml  gemini-generate.contract.yaml
crates/ai-lib-core/src/registry/: mod.rs
crates/ai-lib-core/src/rerank/: mod.rs  types.rs
crates/ai-lib-core/src/structured/: error.rs  json_mode.rs  mod.rs  validator.rs
crates/ai-lib-core/src/stt/: mod.rs
crates/ai-lib-core/src/transport/: middleware.rs
crates/ai-lib-core/src/tts/: client.rs  mod.rs  types.rs
crates/ai-lib-core/src/types/: content_encode.rs  events.rs  execution_result.rs  manifest_encode.rs  message.rs  mod.rs  text_tool.rs
crates/ai-lib-core/src/utils/: mod.rs
crates/ai-lib-core/tests/: compliance_from_core.rs
crates/ai-lib-core/tests/compliance_runner/: mod.rs
crates/ai-lib-rust/: Cargo.toml
crates/ai-lib-rust/benches/: protocol_loading.rs  request_compilation.rs
crates/ai-lib-rust/examples/: advanced_pipeline.rs  basic_usage.rs  connectivity_report.rs  custom_protocol.rs  embeddings_similarity.rs  guardrails_usage.rs  list_models.rs  multimodal_dry_run.rs  resilience_patterns.rs  service_discovery.rs  tavily_tool_calling.rs
crates/ai-lib-rust/src/: lib.rs
crates/ai-lib-rust/tests/: adaptive_controls.rs  compliance.rs  error_classification.rs  integration_suite.rs  structured_output_integration.rs
crates/ai-lib-rust/tests/fixtures/protocols/v1/providers/: openai.yaml
crates/ai-lib-rust/tests/integration/: error_handling.rs  mod.rs  multimodal.rs  streaming.rs
crates/ai-lib-wasm/: Cargo.toml
crates/ai-lib-wasm/src/: lib.rs
crates/ai-lib-wasmtime-harness/: Cargo.toml
docs/: ARCHITECTURE.md  COMPLETED_TASKS_SUMMARY.md  EXECUTION_SUMMARY.md  FINAL_PROGRESS_REPORT.md  IMPLEMENTATION_NOTES.md  IMPROVEMENTS_COMPLETED.md  LEARNINGS_FROM_AI_LIB.md  P0_TASKS_PROGRESS.md  P1_TASKS_PROGRESS.md  SCHEMA_VALIDATION.md  SECRET_MANAGEMENT.md  STRUCTURED_OUTPUT.md  TOOL_CALLING_GUIDE.md  runtime_features.md
docs/AUDIT_REPORTS/: AUDIT_COMPARISON_AND_ACTION_PLAN.md  Professional Technical Audit Report.txt
docs/design/: 0-manifest-first 的 runtime 架构图.txt  1-运行时结构体与模块划分设计.txt  2-runtime 的完整数据流图.txt  3-应用层 Model Selector（模型选择器）设计.txt  4-runtime 和应用层协议.txt  5-多模型策略引擎.txt  6-parser 插件系统设计.txt  7-Manifest 中的协议（protocol）字段设计.txt  8-自动协议推断.txt  AI-Protocol runtime demand v0
examples/: advanced_pipeline.rs  basic_usage.rs  batch_processing.rs  bench_mem.rs  connectivity_report.rs  custom_protocol.rs  deepseek_chat_stream.rs  deepseek_tool_call_stream.rs  embeddings_similarity.rs  guardrails_usage.rs  interceptors.rs  list_models.rs  multi_provider.rs  multimodal_dry_run.rs  routing_mvp.rs  run_tavily_example.ps1  service_discovery.rs  tavily_tool_calling.rs  test_protocol_loading.rs
scripts/: wasmtime-pt073-smoke.ps1
src/: client.rs  error.rs  error_code.rs  lib.rs
src/batch/: collector.rs  executor.rs  mod.rs
src/cache/: backend.rs  key.rs  manager.rs  mod.rs
src/client/: builder.rs  chat.rs  core.rs  endpoint.rs  error_classification.rs  execution.rs  policy.rs  preflight.rs  signals.rs  types.rs  validation.rs
src/computer_use/: mod.rs
src/drivers/: anthropic.rs  gemini.rs  mod.rs
src/embeddings/: client.rs  mod.rs  types.rs  vectors.rs
src/facade/: chat.rs  mod.rs  prelude.rs  provider.rs
src/guardrails/: config.rs  filters.rs  mod.rs  pii.rs  result.rs
src/interceptors/: mod.rs
src/mcp/: mod.rs
src/multimodal/: mod.rs
src/pipeline/: accumulate.rs  (+7 more)
tests/: adaptive_controls.rs  client_mock.rs  compliance.rs  error_classification.rs  generative_compliance.rs  generative_manifest_consumption.rs  mcp_bridge.rs  protocol_loading.rs  protocol_validation.rs  streaming_pipeline.rs  structured_output_integration.rs  v2_compliance.rs
tools/: secret-management.ps1
(+46 files in other folders)
