[package]
name = "ai-lib-rust"
version = "0.8.1"
edition = "2021"
authors = ["AI-Protocol Team"]
license = "MIT OR Apache-2.0"
description = "Protocol Runtime for AI-Protocol - A high-performance Rust reference implementation"
repository = "https://github.com/hiddenpath/ai-lib-rust"
readme = "README.md"
rust-version = "1.75"
keywords = ["ai", "unified", "api", "llm", "multi-provider"]
categories = ["api-bindings", "network-programming", "asynchronous"]

# 发布时仅包含下列文件；工作文档、内部文档、临时文件（如 docs/runtime_features.md、
# ROBUSTNESS_IMPROVEMENTS.md、*.txt 等）未列入，不会随 crate 发布。
include = [
  "Cargo.toml",
  "README.md",
  "README_CN.md",
  "docs/ARCHITECTURE.md",
  "CHANGELOG.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**",
  "examples/**",
]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = { version = "0.3", features = ["alloc"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }

# JSON manipulation
tokio-util = { version = "0.7", features = ["codec"] }

# Hot reload and atomic operations
arc-swap = "1.6"
notify = "6.1"

# JSON Schema validation
jsonschema = "0.18"

# Structured output support
schemars = "0.8"  # JSON schema generation from Rust types
regex = "1.10"    # Regular expressions for pattern constraints

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2.5"
async-trait = "0.1"
bytes = "1.5"
async-recursion = "1.0"
lru = "0.12"
keyring = "2.0"
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
tokio-stream = "0.1"
mockito = "1.2"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "protocol_loading"
harness = false

[[bench]]
name = "request_compilation"
harness = false

[[bench]]
name = "streaming_pipeline"
harness = false

[features]
# Keep runtime core lean; opt-in progressive complexity to preserve a stable API surface.
default = []

# Capability-based features (V2 protocol alignment)
embeddings = []
batch = []
guardrails = []
tokens = []
telemetry = []

# V2 new capability features
mcp = []                    # MCP client (stdio + HTTP transport)
computer_use = []           # Computer Use abstraction
multimodal = []             # Extended multimodal (audio/video/omni)
reasoning = []              # Extended thinking / chain-of-thought

# Infrastructure features
routing_mvp = []
interceptors = []

# Meta-features for convenience
full = [
    "embeddings", "batch", "guardrails", "tokens", "telemetry",
    "routing_mvp", "interceptors",
    "mcp", "computer_use", "multimodal", "reasoning",
]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "custom_protocol"
path = "examples/custom_protocol.rs"

[[example]]
name = "test_protocol_loading"
path = "examples/test_protocol_loading.rs"

[[example]]
name = "connectivity_report"
path = "examples/connectivity_report.rs"

[[example]]
name = "guardrails_usage"
path = "examples/guardrails_usage.rs"
required-features = ["guardrails"]

[[example]]
name = "resilience_patterns"
path = "examples/resilience_patterns.rs"

[[example]]
name = "batch_processing"
path = "examples/batch_processing.rs"
required-features = ["batch"]

[[example]]
name = "embeddings_similarity"
path = "examples/embeddings_similarity.rs"
required-features = ["embeddings"]

[[bin]]
name = "validate_protocols"
path = "src/bin/validate_protocols.rs"

[[bin]]
name = "ai-protocol-cli"
path = "src/bin/ai_protocol_cli.rs"