[package]
name = "ai-lib-contact"
version = "0.9.3"
edition = "2021"
authors = ["AI-Protocol Team"]
license = "MIT OR Apache-2.0"
description = "AI-Protocol policy layer: cache, batch, routing, plugins, resilience, guardrails, tokens, telemetry"
repository = "https://github.com/ailib-official/ai-lib-rust"
rust-version = "1.75"

[lib]
name = "ai_lib_contact"
path = "src/lib.rs"

[dependencies]
ai-lib-core = { path = "../ai-lib-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "sync", "time"] }
lru = "0.12"
regex = "1.10"
tracing = "0.1"
async-trait = "0.1"
futures = { version = "0.3", features = ["alloc"] }
once_cell = "1.19"
sha2 = "0.10"

[features]
default = []
batch = []
guardrails = []
tokens = []
telemetry = []
routing_mvp = []
interceptors = []
full = [
    "batch", "guardrails", "tokens", "telemetry",
    "routing_mvp", "interceptors",
]
