[package]
name = "ai-lib-core"
version = "0.9.3"
edition = "2021"
authors = ["AI-Protocol Team"]
license = "MIT OR Apache-2.0"
description = "AI-Protocol execution runtime core (protocol, client, pipeline, transport)"
repository = "https://github.com/ailib-official/ai-lib-rust"
readme = "../../README.md"
rust-version = "1.75"
keywords = ["ai", "unified", "api", "llm", "multi-provider"]
categories = ["api-bindings", "network-programming", "asynchronous"]

include = [
    "Cargo.toml",
    "../../README.md",
    "../../README_CN.md",
    "../../docs/ARCHITECTURE.md",
    "../../CHANGELOG.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "src/**",
]

[lib]
name = "ai_lib_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
bytes = "1.5"
url = "2.5"
async-trait = "0.1"
once_cell = "1.19"
base64 = "0.22"
sha2 = "0.10"
tracing = { version = "0.1", default-features = false, features = ["std"] }
schemars = "0.8"
uuid = { version = "1.6", features = ["v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonschema = "0.18"
tokio = { version = "1.0", features = ["full"] }
futures = { version = "0.3", features = ["alloc"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls", "blocking", "multipart"] }
tokio-util = { version = "0.7", features = ["codec"] }
arc-swap = "1.6"
notify = "6.1"
lru = "0.12"
keyring = "2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-recursion = "1.0"

[features]
default = []
embeddings = []
batch = []
mcp = []
computer_use = []
multimodal = []
reasoning = []
stt = []
tts = []
reranking = []
full = [
    "embeddings", "mcp", "computer_use", "multimodal", "reasoning",
    "stt", "tts", "reranking",
]
